--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@oclif/plugin-help": "2.2.3",
     "@oclif/test": "1.2.6",
     "@salesforce/dev-config": "1.6.0",
+    "@salesforce/ts-sinon": "^1.2.2",
     "@types/chai": "4.2.12",
     "@types/mocha": "5.2.7",
     "@types/node": "10.17.28",
