--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "globby": "8.0.2",
     "mocha": "5.2.0",
     "nyc": "14.1.1",
+    "sfdx-cli": "^7.72.0",
     "ts-node": "8.10.2",
     "tslint": "5.20.1"
   },
