--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sfdx-executor",
-  "description": "This plugin is to execure series of sfdx commands simplifiying tasks that require a number of commands to be executed",
+  "description": "This SFDX plugin is designed to execure series of SFDX commands sequentially, in a cross platform way, to eliminate the need for multiple script files in a repository for series of repeatable taks",
   "version": "1.1.2",
   "author": "Gavin Palmer",
   "bugs": "https://github.com/gavinhughpalmer/sfdx-executor/issues",
