--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@salesforce/dev-config": "1.6.0",
     "@salesforce/ts-sinon": "1.2.3",
     "@types/chai": "4.2.12",
+    "@types/chai-as-promised": "^7.1.3",
     "@types/mocha": "5.2.7",
     "@types/node": "10.17.35",
     "chai": "4.2.0",
+    "chai-as-promised": "^7.1.1",
     "globby": "11.0.1",
     "mocha": "5.2.0",
     "nyc": "15.1.0",
