Adding in the remaining unit tests for the files system comands, the remaining tests are for integration tests, which can create a scratch org and push the metadata to it

--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@types/chai": "4.2.13",
     "@types/chai-as-promised": "^7.1.3",
     "@types/mocha": "5.2.7",
+    "@types/mock-fs": "^4.13.0",
     "@types/node": "10.17.37",
     "chai": "4.2.0",
     "chai-as-promised": "^7.1.1",
     "globby": "11.0.1",
     "mocha": "5.2.0",
+    "mock-fs": "^4.13.0",
     "nyc": "15.1.0",
     "sfdx-cli": "7.75.0",
     "ts-node": "9.0.0",
