--- a/package.json
+++ b/package.json
@@ -68,6 +68,9 @@
     "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
     "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif-dev readme && git add README.md",
-    "fix": "tslint -p test -t stylish --fix"
+    "fix": "tslint -p test -t stylish --fix",
+    "postversion": "yarn publish",
+    "postpublish": "git push origin --all; git push origin --tags",
+    "preversion": "yarn test"
   }
 }
