--- a/package.json
+++ b/package.json
@@ -29,9 +29,14 @@
     "mocha": "5.2.0",
     "mock-fs": "4.13.0",
     "nyc": "15.1.0",
+    "prettier": "2.2.1",
     "sfdx-cli": "7.82.0",
     "ts-node": "9.1.1",
-    "tslint": "6.1.3"
+    "tslint": "6.1.3",
+    "tslint-config-prettier": "1.18.0",
+    "tslint-consistent-codestyle": "1.16.0",
+    "tslint-eslint-rules": "5.4.0",
+    "tslint-microsoft-contrib": "6.2.0"
   },
   "engines": {
     "node": ">=8.0.0"
@@ -71,6 +76,7 @@
     "fix": "tslint -p test -t stylish --fix",
     "postversion": "yarn publish",
     "postpublish": "git push origin --all; git push origin --tags",
-    "preversion": "yarn test"
+    "preversion": "yarn test",
+    "format": "prettier 'src/**/*.ts' --write && prettier 'test/**/*.ts' --write"
   }
 }
