--- a/package.json
+++ b/package.json
@@ -32,11 +32,7 @@
     "prettier": "2.2.1",
     "sfdx-cli": "7.82.0",
     "ts-node": "9.1.1",
-    "tslint": "6.1.3",
-    "tslint-config-prettier": "1.18.0",
-    "tslint-consistent-codestyle": "1.16.0",
-    "tslint-eslint-rules": "5.4.0",
-    "tslint-microsoft-contrib": "6.2.0"
+    "tslint": "6.1.3"
   },
   "engines": {
     "node": ">=8.0.0"
