--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "prettier": "2.2.1",
     "sfdx-cli": "7.82.0",
     "ts-node": "9.1.1",
-    "tslint": "6.1.3"
+    "tslint": "6.1.3",
+    "yarn-audit-fix": "^3.2.13"
   },
   "engines": {
     "node": ">=8.0.0"
@@ -73,6 +74,7 @@
     "postversion": "yarn publish",
     "postpublish": "git push origin --all; git push origin --tags",
     "preversion": "yarn test",
-    "format": "prettier 'src/**/*.ts' --write && prettier 'test/**/*.ts' --write"
+    "format": "prettier 'src/**/*.ts' --write && prettier 'test/**/*.ts' --write",
+    "audit-fix": "yarn-audit-fix --force"
   }
 }
